--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
-DB_HOST=dpg-cq3b79bqf0us73deeoa0-a.oregon-postgres.render.com
+DB_HOST=dpg-cq93apbv2p9s73ccoak0-a.singapore-postgres.render.com
 DB_PORT=5432
-DB_USER=face_detection_database_version_1_user
-DB_PASSWORD=uc5abmKPV5xm7Z14j6fCYd1oyUy1qwFO
-DB_NAME=face_detection_database_version_1
+DB_USER=aman
+DB_PASSWORD=c4dEti9GRTfDVAbRHoy28cix6W4A043N
+DB_NAME=database_0t1k
