--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "face-detection-api",
+  "name": "Care4crisis-API",
   "version": "1.0.0",
   "description": "",
   "main": "server.js",
