--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
-DB_HOST=dpg-cq93apbv2p9s73ccoak0-a.singapore-postgres.render.com
+DB_HOST=database-1.cdy8agwesuox.eu-north-1.rds.amazonaws.com
 DB_PORT=5432
-DB_USER=aman
-DB_PASSWORD=c4dEti9GRTfDVAbRHoy28cix6W4A043N
-DB_NAME=database_0t1k
+DB_USER=postgres
+DB_PASSWORD=CodeToHell4
+DB_NAME=database2
